# commutescout

./: .dockerignore  .envrc  .gcloudignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EVALS.md  README.md  SECURITY.md  constraints.txt  firestore.rules  pyproject.toml  server.json  sr-main.js
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  evals.yml  model-watch.yml
docs/: adding-a-source.md  architecture.md  data-sources.md  deploy.md  mcp.md  registry.md  state-coverage.md  state-expansion-audit.md
evals/: __init__.py  build_fixtures.py  fixture_mode.py  record.py  run_evals.py
evals/fixtures/fire-day/: chp.xml  lcs_d06.xml  lcs_d07.xml  manifest.json  wfigs.json
evals/fixtures/quiet-day/: cc_d03.xml  cc_d10.xml  chp.xml  lcs_d03.xml  lcs_d04.xml  manifest.json  wfigs.json
evals/fixtures/real-2026-07-07/: manifest.json
evals/fixtures/storm-day/: cc_d03.xml  cc_d10.xml  chp.xml  lcs_d03.xml  manifest.json  wfigs.json
evals/golden/: fire_day.yaml  quiet_day.yaml  real_day.yaml  storm_day.yaml
evals/results/: badge.json  history.jsonl
scripts/: build_deck_bundle.sh  check_models.py  known_models.json  usage_report.py
src/ca_roads/: __init__.py  cache.py  dedupe.py  geo.py  models.py  roaddata.py  xmlutil.py
src/ca_roads/feeds/: __init__.py  bay511.py  chains.py  chp.py  lcs.py  nvroads.py  nws.py  portal.py  quakes.py  tomtom.py  wildfire.py
src/ca_roads_demo/: __init__.py  analytics.py  app.py  archive.py  prompt.py  roadsnap.py  states.py  trips.py  watch.py
src/ca_roads_mcp/: __init__.py  corridors.py  geocode.py  ratelimit.py  regions.py  routes.py  serialize.py  server.py  telemetry.py
tests/: conftest.py  test_analytics.py  test_archive.py  test_ask_degrade.py  test_cache.py  test_chains.py  test_chp.py  test_context_sources.py  test_corridors.py  test_dedupe.py  test_events_endpoint.py  test_fixture_scenarios.py  test_geo.py  test_geocode.py  test_incident_endpoint.py  test_keyed_sources.py  test_lcs.py  test_nearby_events.py  test_portal.py  test_ratelimit.py  test_roadsnap.py  test_routes.py  test_serialize.py  test_states.py  test_staticmap.py  test_trips.py  test_watch.py  test_wildfire.py
tests/fixtures/: cc_sample.xml  chp_sample.xml  chp_truncated.xml  lcs_sample.xml  wfigs_sample.json
(+10 files in other folders)
