[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-roads-mcp"
version = "0.1.0"
description = "Live California road conditions for AI assistants: CHP incidents, Caltrans lane closures, chain controls, and wildfire impacts over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Nic Glazkov" }]
dependencies = [
    "httpx>=0.27",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ca_roads"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
