[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-roads-mcp"
version = "1.12.1"
description = "Live California road conditions for AI assistants: CHP incidents, Caltrans lane closures, chain controls, and wildfire impacts over MCP."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Nic Glazkov" }]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.9",
    "tzdata; sys_platform == 'win32'",
]

[project.scripts]
ca-roads-mcp = "ca_roads_mcp.server:main"
ca-roads-demo = "ca_roads_demo.app:main"

[project.optional-dependencies]
demo = [
    "anthropic>=0.40",
    "google-auth>=2.30",
    "google-cloud-firestore>=2.16",
    "pywebpush>=2.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
]
evals = ["anthropic>=0.40", "pyyaml>=6"]

[tool.hatch.build.targets.wheel]
packages = ["src/ca_roads", "src/ca_roads_mcp", "src/ca_roads_demo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"evals/build_fixtures.py" = ["E501"]  # fixture data tables read better on one line
